<resources>
    <string name="app_name">Celestini</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_label">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="app_sub_title">A Cedat Project</string>
    <string name="signup_text">SignUp</string>
    <string name="log_out">LogOut</string>
    <string name="title_activity_client_contact_info">Client Contact</string>
    <string name="title_activity_health_yes_no">Health Check 1</string>
    <string name="title_activity_health_check_questions">Health Check 2</string>
    <string name="title_activity_structured_questions">Health Check 3</string>
    <string-array name="camera_options">
        <item>Take photo</item>
        <item>Choose photo</item>
    </string-array>
    <string name="title_activity_sync">SyncActivity</string>

</resources>
